Minor code cleanups